primo container con 12 colonne

--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
     <link rel="stylesheet" href="css/framework-12col.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- first container with 12 colums -->
+
+    <div class="container">
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+      <div class="col-1"></div>
+    </div>
+
+    <!-- first container with 12 colums -->
+  </body>
 </html>
