secondo, terzo e quarto container

--- a/index.html
+++ b/index.html
@@ -27,5 +27,39 @@
     </div>
 
     <!-- first container with 12 colums -->
+
+    <!-- second container with 1 column -->
+
+    <div class="container">
+      <div class="col-12"></div>
+    </div>
+
+    <!-- /second container with 1 column -->
+
+    <!-- third container with three columns -->
+
+    <div class="container">
+      <div class="col-8"></div>
+      <div class="col-2"></div>
+      <div class="col-2"></div>
+    </div>
+
+    <!-- /third container with three columns -->
+
+    <!-- fourth container with five columns -->
+
+    <div class="container">
+      <div class="col-1"></div>
+      <div class="col-2"></div>
+      <div class="col-2"></div>
+      <div class="col-6"></div>
+      <div class="col-1"></div>
+    </div>
+
+    <!-- /fourth container with five columns -->
+
+    <!-- fifth container with two columns and five nested elements -->
+
+    <!-- /fifth container with two columns and five nested elements -->
   </body>
 </html>
