impostazione cinque container principali

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 
     <!-- fifth container with two columns and five nested elements -->
 
+    <div class="container">
+      <div class="col-6"></div>
+      <div class="col-6"></div>
+    </div>
+
     <!-- /fifth container with two columns and five nested elements -->
   </body>
 </html>
