impostazione colonne annidate

--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
     <!-- fifth container with two columns and five nested elements -->
 
     <div class="container">
-      <div class="col-6"></div>
-      <div class="col-6"></div>
+      <div class="col-6">
+        <div class="col-2"></div>
+        <div class="col-2"></div>
+        <div class="col-8"></div>
+      </div>
+      <div class="col-6">
+        <div class="col-6"></div>
+        <div class="col-6"></div>
+      </div>
     </div>
 
     <!-- /fifth container with two columns and five nested elements -->
