--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
 
     <div class="container">
       <div class="col-6">
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-8"></div>
+        <div class="container">
+          <div class="col-2"></div>
+          <div class="col-2"></div>
+          <div class="col-8"></div>
+        </div>
       </div>
       <div class="col-6">
-        <div class="col-6"></div>
-        <div class="col-6"></div>
+        <div class="container">
+          <div class="col-6"></div>
+          <div class="col-6"></div>
+        </div>
       </div>
     </div>
 
