allineamento testo colonne non annidate

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <!-- first container with 12 colums -->
 
     <div class="container">
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
-      <div class="col-1"></div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
     </div>
 
     <!-- first container with 12 colums -->
@@ -31,7 +31,7 @@
     <!-- second container with 1 column -->
 
     <div class="container">
-      <div class="col-12"></div>
+      <div class="col-12">12 col</div>
     </div>
 
     <!-- /second container with 1 column -->
@@ -39,9 +39,9 @@
     <!-- third container with three columns -->
 
     <div class="container">
-      <div class="col-8"></div>
-      <div class="col-2"></div>
-      <div class="col-2"></div>
+      <div class="col-8">8 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
     </div>
 
     <!-- /third container with three columns -->
@@ -49,11 +49,11 @@
     <!-- fourth container with five columns -->
 
     <div class="container">
-      <div class="col-1"></div>
-      <div class="col-2"></div>
-      <div class="col-2"></div>
-      <div class="col-6"></div>
-      <div class="col-1"></div>
+      <div class="col-1">1 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-6">6 col</div>
+      <div class="col-1">1 col</div>
     </div>
 
     <!-- /fourth container with five columns -->
@@ -63,15 +63,15 @@
     <div class="container">
       <div class="col-6">
         <div class="container">
-          <div class="col-2"></div>
-          <div class="col-2"></div>
-          <div class="col-8"></div>
+          <div class="col-2">Nested 2 col</div>
+          <div class="col-2">Nested 2 col</div>
+          <div class="col-8">Nested 8 col</div>
         </div>
       </div>
       <div class="col-6">
         <div class="container">
-          <div class="col-6"></div>
-          <div class="col-6"></div>
+          <div class="col-6">Nested 6 col</div>
+          <div class="col-6">Nested 6 col</div>
         </div>
       </div>
     </div>
